--- a/writing-samples/index.html
+++ b/writing-samples/index.html
@@ -142,7 +142,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-desktop" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li id="menu-item-44" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-44"><a href="../index.html" class="menu-link">My Work</a></li>
 <li id="menu-item-1779" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1722 current_page_item menu-item-1779"><a href="" aria-current="page" class="menu-link">Writing Samples</a></li>
 <li id="menu-item-1171" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="../about/index.html" class="menu-link">About</a></li>
-<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link">Resume/CV</a></li>
+<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 									</div>
 																		</div>
@@ -179,7 +179,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-mobile" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-44"><a href="../index.html" class="menu-link">My Work</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1722 current_page_item menu-item-1779"><a href="" aria-current="page" class="menu-link">Writing Samples</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="../about/index.html" class="menu-link">About</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link">Resume/CV</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 					</div>
 			</div>
@@ -232,7 +232,7 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Prose</a>
 					</div>
 
-					<div id="elementor-tab-content-2271" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-2271"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4><a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
+					<div id="elementor-tab-content-2271" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-2271"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4><br><a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-2272" class="elementor-tab-title" data-tab="2" role="button" aria-controls="elementor-tab-content-2272" aria-expanded="false">
@@ -243,7 +243,33 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Scripts</a>
 					</div>
 
-					<div id="elementor-tab-content-2272" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-2272"><h4><a href="https://drive.google.com/file/d/1hQyuAtJJPfJ_7Npqd0DPUPshaMQx-EkC/view?usp=sharing"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">Mettle</span></span></a></h4><p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash; </b>A scene about a tense political situation between leaders of a city.</p><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff; text-decoration: underline;" href="../downloads/writing/dialogue.pdf" target="_blank" rel="noopener">Zen</a></span></h4><p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p><p><strong>Project</strong> &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></p><h4><a href="https://drive.google.com/file/d/1zRVD3-0Agf1fuMtxGMOFGaZfEQuwcRA7/view?usp=sharing"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">DIS-K promo pilot script</span></span></a></h4><p><b>Genre &ndash; </b>Comedy, Satire, Scifi<br><b>Description &ndash; </b>A parody promo video about a robot from defense company that is ambiguously vague.</p></div>
+					<div id="elementor-tab-content-2272" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-2272">
+						<h4>
+							<a href="https://drive.google.com/file/d/1hQyuAtJJPfJ_7Npqd0DPUPshaMQx-EkC/view?usp=sharing" target="_blank" rel="noopener">
+								<span style="text-decoration: underline;">
+									<span style="color: #00ffff; text-decoration: underline;">Mettle</span>
+								</span>
+							</a>
+						</h4>
+						<p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash; </b>A scene about a tense political situation between leaders of a city.</p>
+						<br>
+						<h4>
+							<span style="text-decoration: underline; color: #00ffff;">
+								<a style="color: #00ffff; text-decoration: underline;" href="../downloads/writing/dialogue.pdf" target="_blank" rel="noopener">Zen</a>
+							</span>
+						</h4>
+						<p><b>Genre &ndash; </b>Politics, Intrigue, Diesel-punk<br><b>Description &ndash;&nbsp;</b>This two-part cutscene, establishes character dynamics between the emotionally strained Surveyor and SAI 0525.</p>
+						<p><strong>Project</strong> &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></p>
+						<h4>
+							<br
+							<a href="https://drive.google.com/file/d/1zRVD3-0Agf1fuMtxGMOFGaZfEQuwcRA7/view?usp=sharing" target="_blank" rel="noopener">
+								<span style="text-decoration: underline;">
+									<span style="color: #00ffff; text-decoration: underline;">DIS-K promo pilot script</span>
+								</span>
+							</a>
+						</h4>
+						<p><b>Genre &ndash; </b>Comedy, Satire, Scifi<br><b>Description &ndash; </b>A parody promo video about a robot from defense company that is ambiguously vague.</p>
+					</div>
 				</div>
 								</div>
 				</div>
@@ -260,7 +286,18 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Barks</a>
 					</div>
 
-					<div id="elementor-tab-content-1981" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1981"><h4><span style="text-decoration: underline;"><strong><span style="color: #00ffff; text-decoration: underline;">WORKOUT BARKS</span></strong></span></h4><p><b>Genre &ndash; </b>Meditative, Guide, Verbose, Robotic<br><b>Description &ndash; </b>Companion Intelligence SAI 0525 guides the player character through the journey in performing Kriyas.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span><br></strong></p></div>
+					<div id="elementor-tab-content-1981" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1981">
+						<h4>
+							<a href="../downloads/writing/barks.pdf" target="_blank" rel="noopener">
+								<span style="text-decoration: underline;">
+									<strong><span style="color: #00ffff; text-decoration: underline;">WORKOUT BARKS</span></strong>
+								</span>
+							</a>
+						</h4>
+						<p><b>Genre &ndash; </b>Meditative, Guide, Verbose, Robotic<br><b>Description &ndash; </b>Companion Intelligence SAI 0525 guides the player character through the journey in performing Kriyas.</p>
+						<p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span><br></strong></p>
+					</div>
+				 <!-- ../../downloads/writing/barks.pdf-->
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-1982" class="elementor-tab-title" data-tab="2" role="button" aria-controls="elementor-tab-content-1982" aria-expanded="false">
@@ -271,7 +308,7 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Character Bios</a>
 					</div>
 
-					<div id="elementor-tab-content-1982" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1982"><h4><a href="../downloads/characters/surveyor.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff;"><strong>SAI 0525</strong></span></span></a></h4><p><b>Personality &ndash; </b>proud, confident, and stubbornly committed to its Arogyat ideology, yet insecure and defensive.<br><b>Description &ndash;&nbsp;</b> A decommissioned companion intelligence fighting to restore a system that oppresses him.</p><p><strong>Project &ndash; <a href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener"><span style="color: #00ffff;">Interactive Fitness Game</span></a><br></strong></p><h4><a href="../downloads/characters/SAI0525.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline; color: #00ffff;"><strong>THE SURVEYOR</strong></span></a></h4><p><b>Genre &ndash; </b>a melancholic, manipulative, and paranoid soul with a stubborn streak. Though still curious and empathetic towards other.<br><b>Description &ndash; </b>A person haunted by the death of their closest friend and the guilt of surviving, they spiral into addiction and despair.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></strong></p></div>
+					<div id="elementor-tab-content-1982" class="elementor-tab-content elementor-clearfix" data-tab="2" role="region" aria-labelledby="elementor-tab-title-1982"><h4><a href="../downloads/characters/SAI0525.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff;"><strong>SAI 0525</strong></span></span></a></h4><p><b>Personality &ndash; </b>proud, confident, and stubbornly committed to its Arogyat ideology, yet insecure and defensive.<br><b>Description &ndash;&nbsp;</b> A decommissioned companion intelligence fighting to restore a system that oppresses him.</p><p><strong>Project &ndash; <a href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener"><span style="color: #00ffff;">Interactive Fitness Game</span></a><br></strong></p><h4><br><a href="../downloads/characters/surveyor.pdf" target="_blank" rel="noopener"><span style="text-decoration: underline; color: #00ffff;"><strong>THE SURVEYOR</strong></span></a></h4><p><b>Genre &ndash; </b>a melancholic, manipulative, and paranoid soul with a stubborn streak. Though still curious and empathetic towards other.<br><b>Description &ndash; </b>A person haunted by the death of their closest friend and the guilt of surviving, they spiral into addiction and despair.</p><p><strong>Project &ndash; <span style="color: #00ffff;"><a style="color: #00ffff;" href="../home/ar-mobile-game/index.html" target="_blank" rel="noopener">Interactive Fitness Game</a></span></strong></p></div>
 				</div>
 								</div>
 				</div>
@@ -292,7 +329,9 @@ flexibility(document.documentElement);
 												<a class="elementor-toggle-title" tabindex="0">Prose</a>
 					</div>
 
-					<div id="elementor-tab-content-1461" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1461"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4><a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
+					<div id="elementor-tab-content-1461" class="elementor-tab-content elementor-clearfix" data-tab="1" role="region" aria-labelledby="elementor-tab-title-1461"><h4><span style="text-decoration: underline; color: #00ffff;"><a style="color: #00ffff;" href="https://drive.google.com/file/d/1j4ICIByoB6CyT45p01JwXLcestd8vKh5/view?usp=share_link" target="_blank" rel="noopener">Into the Storm</a></span></h4><p><b>Genre &ndash; </b>SciFi, Drama, Dystopia<br><b>Description &ndash; </b>A short excerpt about regret, and a longing for the past.</p><h4>
+						<br>
+						<a href="https://drive.google.com/file/d/14K2KZqs_SfsXSGp5IIX59FEFthkKCyLT/view?usp=share_link" target="_blank" rel="noopener"><span style="text-decoration: underline;"><span style="color: #00ffff; text-decoration: underline;">King&rsquo;s Court</span></span></a></h4><p><b>Genre &ndash; </b>Fantasy, Drama, Mystery<br><b>Description &ndash; </b>A short excerpt about a dying king and an ominous message.</p></div>
 				</div>
 							<div class="elementor-toggle-item">
 					<div id="elementor-tab-title-1462" class="elementor-tab-title" data-tab="2" role="button" aria-controls="elementor-tab-content-1462" aria-expanded="false">
