--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-desktop" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li id="menu-item-44" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-213 current_page_item menu-item-44"><a href="" aria-current="page" class="menu-link">My Work</a></li>
 <li id="menu-item-1779" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1779"><a href="writing-samples/index.html" class="menu-link">Writing Samples</a></li>
 <li id="menu-item-1171" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="about/index.html" class="menu-link">About</a></li>
-<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link">Resume/CV</a></li>
+<li id="menu-item-1172" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 									</div>
 																		</div>
@@ -183,7 +183,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-mobile" aria-label="Site Navigation: Navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-slide-down  stack-on-mobile"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-213 current_page_item menu-item-44"><a href="" aria-current="page" class="menu-link">My Work</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1779"><a href="writing-samples/index.html" class="menu-link">Writing Samples</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1171"><a href="about/index.html" class="menu-link">About</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link">Resume/CV</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1172"><a href="https://ramendratripathi.github.io/downloads/RamendraResume.pdf" class="menu-link" target="_blank">Resume/CV</a></li>
 </ul></div></nav></div></div>		</div>
 					</div>
 			</div>
@@ -227,13 +227,86 @@ flexibility(document.documentElement);
 				</div>
 				<div class="elementor-element elementor-element-57b61d7 elementor-invisible elementor-widget elementor-widget-heading" data-id="57b61d7" data-element_type="widget" data-settings='{"_animation":"fadeInUp"}' data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h4 class="elementor-heading-title elementor-size-default"><a href="mailto:ramendra.x.tripathi@gmail.com"> Email: ramendra.x.tripathi@gmail.com</a></h4>		</div>
+			<h4 class="elementor-heading-title elementor-size-default" style="margin-top: 45px;" ><a href="mailto:ramendra.x.tripathi@gmail.com"> Email: ramendra.x.tripathi@gmail.com</a></h4>		</div>
 				</div>
 				<div class="elementor-element elementor-element-9db2d2e elementor-view-default elementor-invisible elementor-widget elementor-widget-icon" data-id="9db2d2e" data-element_type="widget" data-settings='{"_animation":"fadeInUp"}' data-widget_type="icon.default">
 				<div class="elementor-widget-container">
-					<div class="elementor-icon-wrapper">
+					<!-- <div class="elementor-icon-wrapper">
 			<a class="elementor-icon elementor-animation-sink" href="#professionalwork">
 			<svg aria-hidden="true" class="e-font-icon-svg e-fas-chevron-down" viewbox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>			</a>
+		</div> -->
+		<div style="height: 20px;"></div>
+		<div class="elementor-element elementor-element-custom-gold-heading elementor-invisible elementor-widget elementor-widget-heading" data-id="custom-gold-heading" data-element_type="widget" data-settings='{"_animation":"fadeInUp"}' data-widget_type="heading.default" style="margin-right: 0px; opacity: 0.62;">
+			<div class="elementor-widget-container custom-nav-links">
+				<style>
+					.custom-link-fade {
+						color: whitesmoke !important;
+						font-weight: bold !important;
+						text-transform: uppercase !important;
+						letter-spacing: 2px;
+						font-family: 'Poppins', sans-serif;
+						text-decoration: none;
+						transition: color 0.2s, filter 0.2s, transform 0.2s;
+						display: inline-block;
+					}
+					.custom-link-fade:hover {
+						color: #00ffff !important;
+						transform: scale(.99);
+					}
+					.custom-nav-links {
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						flex-wrap: wrap;
+						gap: 0.5em;
+					}
+					.custom-nav-links .custom-link-group {
+						display: flex;
+						align-items: center;
+						gap: 0.2em;
+					}
+					.custom-nav-links .custom-sep {
+						color: #BF9D68;
+						/* margin: 0 12px; */
+						font-weight: bold;
+						font-size: 1.2em;
+					}
+
+					.custom-dis{
+						display: none;
+					}
+					@media (max-width: 600px) {
+						.custom-nav-links {
+							flex-direction: column;
+							gap: 0.2em;
+						}
+						.custom-nav-links .custom-sep {
+							margin: 0 0 2px 0;
+							font-size: 1em;
+						}
+						.custom-link-fade {
+							font-size: 1em;
+						}
+						.custom-nav-links .custom-link-group {
+							gap: 0.2em;
+						}
+						.custom-dis{
+							display: flex;
+						}
+					}
+				</style>
+				<div class="custom-link-group">
+					<span>&gt;</span>
+					<a href="#professionalwork" class="custom-link-fade">Professional Work</a>
+					<span class="custom-dis">&lt;</span>
+				</div>
+				<span class="custom-sep">|</span>
+				<div class="custom-link-group">
+					<span class="custom-dis">&gt;</span>
+					<a href="writing-samples/index.html" target="_blank" rel="noopener" class="custom-link-fade">Writing Samples</a>
+					<span>&lt;</span>
+				</div>
+			</div>
 		</div>
 				</div>
 				</div>
