--- a/about/index.html
+++ b/about/index.html
@@ -3227,12 +3227,12 @@
         --e-global-color-astglobalcolor8: #222222;
       }
     </style>
-    <link
+    <!-- <link
       rel="stylesheet"
       id="astra-google-fonts-css"
       href="https://fonts.googleapis.com/css?family=Arial%3A400%2C700&amp;display=fallback&amp;ver=4.8.0"
       media="all"
-    />
+    /> -->
     <link
       rel="stylesheet"
       id="astra-menu-animation-css"
