--- a/index.html
+++ b/index.html
@@ -295,7 +295,16 @@ flexibility(document.documentElement);
 		<div class="elementor-element elementor-element-621e097 e-con-full e-flex e-con e-child" data-id="621e097" data-element_type="container">
 			<div class="elementor-element elementor-element-aa866db elementor-widget-mobile__width-initial elementor-widget elementor-widget-heading" data-id="aa866db" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<h1 class="elementor-heading-title elementor-size-default">Ramendra Tripathi</h1>
+					<h1 class="elementor-heading-title elementor-size-default" >
+						Ramendra Tripathi
+					</h1>
+					<style>
+						@media (max-width: 600px) {
+							.elementor-element-aa866db .elementor-heading-title {
+								font-size: 2.4em !important;
+							}
+						}
+					</style>
 				</div>
 			</div>
 			<div class="elementor-element elementor-element-0dcca11 elementor-widget elementor-widget-heading" data-id="0dcca11" data-element_type="widget" data-widget_type="heading.default">
@@ -303,9 +312,36 @@ flexibility(document.documentElement);
 					<h2 class="elementor-heading-title elementor-size-default">Narrative Designer | &#2357;&#2352;&#2381;&#2339;&#2367;&#2344;&#2381; | Writer</h2>
 				</div>
 			</div>
+			<style>
+				.mail-custo-desktop {
+					display: block;
+				}
+				.mail-custo-mobile {
+					display: none;
+				}
+				@media (max-width: 600px) {
+					.mail-custo-desktop {
+						display: none;
+					}
+					.mail-custo-mobile {
+						display: block;
+						fill: #bf9d68;
+						font-size: 34px;
+					}
+				}
+			</style>
 			<div class="elementor-element elementor-element-57b61d7 elementor-widget elementor-widget-heading" data-id="57b61d7" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-					<i><h4 class="elementor-heading-title elementor-size-default" style="margin-top: 45px; opacity: 0.62;" >Email:<a href="mailto:ramendra.x.tripathi@gmail.com" class="custom-link-email-fade">  ramendra.x.tripathi@gmail.com</a></h4></i>
+					<!-- Desktop: Show email -->
+					<i class="mail-custo-desktop">
+						<h4 class="elementor-heading-title elementor-size-default" style="margin-top: 45px; opacity: 0.62;">
+							<a href="mailto:ramendra.x.tripathi@gmail.com" class="custom-link-email-fade">ramendra.x.tripathi@gmail.com</a>
+						</h4>
+					</i>
+					<!-- Mobile: Show Contact Me -->
+					 <div class="mail-custo-mobile"> 
+					<a href="mailto:mailto:ramendra.x.tripathi@gmail.com" aria-label="Email" style="--color: #ea4335 !important; --background-color: transparent;" class="ast-builder-social-element ast-inline-flex ast-email footer-social-item"><span class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24"> <title id="email"> Email </title> <path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"></path></svg></span></a>
+					</div>
 				</div>
 			</div>
 			<div class="elementor-element elementor-element-9db2d2e elementor-view-default elementor-widget elementor-widget-icon" data-id="9db2d2e" data-element_type="widget" data-widget_type="icon.default">
